add categories in sw
